--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -1,29 +1,24 @@
 env : {}
 env_config:
-  #Numer of skipping in env, default: 1
-  skip: 1
-  use_arm_camera: False
-model:
-  vf_share_layers: true
-  use_lstm: true
-  # Whether to feed a_{t-1} to LSTM (one-hot encoded if discrete).
-  lstm_use_prev_action: false
-  lstm_cell_size: 256
-# Whether to clip actions to the action space's low/high range spec.
-clip_actions: false
-num_gpus: 1
-num_workers: 4
-framework: torch
-lambda: 0.95
-kl_coeff: 0.5
-clip_rewards: false
-clip_param: 0.1
-vf_clip_param: 10.0
-entropy_coeff: 0.01
-train_batch_size: 5000
-rollout_fragment_length: 100
-sgd_minibatch_size: 500
-num_sgd_iter: 10
-observation_filter: NoFilter
-# Whether to rollout "complete_episodes" or "truncate_episodes".
-batch_mode: complete_episodes
+  use_image_observation: false
+  use_arm_camera: false
+
+rllib:
+  # Whether to clip actions to the action space's low/high range spec.
+  clip_actions: false
+  num_gpus: 0
+  num_workers: 4
+  framework: torch
+  lambda: 0.95
+  kl_coeff: 0.5
+  clip_rewards: false
+  clip_param: 0.1
+  vf_clip_param: 10.0
+  entropy_coeff: 0.01
+  train_batch_size: 5000
+  rollout_fragment_length: 100
+  sgd_minibatch_size: 500
+  num_sgd_iter: 10
+  observation_filter: NoFilter
+  # Whether to rollout "complete_episodes" or "truncate_episodes".
+  batch_mode: complete_episodes
